--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 }
 
 .anc {
+  display: block;
   height: 40px;
   width: 40px;
   position: absolute;
@@ -32,6 +33,12 @@
 a {
   text-decoration: none;
   color: #000;
+}
+
+@media screen and (max-width: 500px) {
+  .anc {
+    display: none;
+  }
 }
 
 #section1 {
@@ -458,8 +465,8 @@ a {
 }
 
 #section3 .jineng .box {
-  height: 100px;
-  width: 100px;
+  height: 90px;
+  width: 90px;
 }
 
 #section3 .jineng .box img {
@@ -558,7 +565,7 @@ a {
 }
 
 #section4 .lianxi {
-  height: 600px;
+  height: 540px;
   width: 450px;
   position: absolute;
   left: 0;
@@ -577,7 +584,9 @@ a {
   right: 0;
   margin: auto;
   background: #fff;
-  top: -15px;
+  top: -19px;
+  padding: 5px 8px;
+  border-radius: 12%;
 }
 
 #section4 .lianxi .wo {
@@ -585,7 +594,7 @@ a {
   line-height: 30px;
   width: 100%;
   text-align: center;
-  font-weight: bold;
+  font-size: 18px;
 }
 
 #section4 .lianxi .wo:nth-child(2) {
@@ -608,6 +617,7 @@ a {
   background: #434852;
   border-bottom-right-radius: 30%;
   border-bottom-left-radius: 30%;
+  cursor: pointer;
 }
 
 #section4 .lianxi .me:hover .ta {
